create a about page draft

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -8,7 +8,7 @@ Global
 ==================================================================================================*/
 /* line 69, ../scss/_custom.scss */
 html {
-  background-color:#FFF; !important;
+  background-color:#FFF!important;
 }
 
 /* line 73, ../scss/_custom.scss */
