--- a/public/css/base.css
+++ b/public/css/base.css
@@ -49,7 +49,8 @@
         background-blend-mode: multiply;
         background-color: rgba(0,0,0,0.2);
         z-index: 1000;
-        display: block;
+		display: block;
+		cursor: pointer;
     }
     
     #portfolio-button:hover  {
