--- a/client/src/assets/css/base.css
+++ b/client/src/assets/css/base.css
@@ -784,6 +784,8 @@ nav ul li button:hover, nav ul li button:active, nav ul li button:focus, nav ul 
 
 .projectThumbnail img {
 	display: initial;
+    width: 100%;
+    height: 285px;
 }
 
 .projectThumbnailHover {
